# lucide-rs

./: Cargo.toml  README.md
.github/workflows/: CI.yml
data/: info.json
examples/: preview.rs
src/: generate.rs  lib.rs  stub.rs
