[package]
name = "lucide-rs"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
description = "Provide lucide icon for rust"
authors = ["sodax <w-sodalite@hotmail.com>"]
homepage = "https://github.com/w-sodalite/lucide-rs.git"
repository = "https://github.com/w-sodalite/lucide-rs.git"

[[bin]]
name = "lucide-generate"
path = "src/generate.rs"
required-features = ["generate"]

[dependencies]
iced = { version = "0.13", optional = true }
#
# generate
quote = { version = "1.0", optional = true }
serde_json = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
data = []
iced = ["dep:iced"]
generate = [
    "dep:quote",
    "dep:serde_json",
    "dep:serde"
]

[package.metadata.release]
registry = "crates-io"
shared-version = true
consolidate-commits = true
pre-release-commit-message = "Release {{version}}"
tag-name = "v{{version}}"
allow-branch = ["main"]